--- a/web-report.ipynb
+++ b/web-report.ipynb
@@ -27,8 +27,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "conn = sqlite3.connect(\"logs.db\")\n",
-    "cursor = conn.cursor()\n"
+    "conn = sqlite3.connect(\"logs.db\",check_same_thread=False)\n",
+    "\n"
    ]
   },
   {
@@ -39,7 +39,9 @@
    "source": [
     "# Посетители из какой страны совершают больше всего действий на сайте?\n",
     "def Report1():\n",
+    "    cursor = conn.cursor()\n",
     "    cursor.execute(\"\"\"select u.country, count(*) from users u, visits v where u.id = v.user_id group by country order by 2 desc\"\"\")\n",
+    "    \n",
     "    result = {}\n",
     "    for i in cursor.fetchall():\n",
     "        result[i[0]] = i[1]\n",
@@ -90,14 +92,16 @@
     "#с 12:00:00  по 18:00:00 - день\n",
     "#с 18:00:00  по 00:00:00 - вечер\n",
     "def Report2(category_id):\n",
-    "    cursor.execute(\"\"\"select time(datetime) from visits where category_id = ?  \"\"\",[(category_id)])\n",
+    "    cursor1 = conn.cursor()\n",
+    "    cursor1.execute(\"\"\"select time(datetime) from visits where category_id = ?  \"\"\",[(category_id)])\n",
     "    result = {}\n",
-    "    for i in cursor.fetchall():\n",
+    "    for i in cursor1.fetchall():\n",
     "        times = GetTimesOfDay(i[0])\n",
     "        if times not in result:\n",
     "            result[times] = 1\n",
     "        else:\n",
     "            result[times] += 1\n",
+    "        \n",
     "    return result"
    ]
   },
@@ -109,8 +113,9 @@
    "source": [
     "#Сколько брошенных (не оплаченных) корзин имеется за определенный период?\n",
     "def Report3(date_start,date_finish):\n",
-    "    cursor.execute(\"\"\"select id from cart_history where not exists (select * from purchases where cart_history.id = purchases.cart_id and datetime between ? and ? ) and datetime between ? and ? \"\"\",[(date_start),(date_finish),(date_start),(date_finish)])\n",
-    "    return len(cursor.fetchall())"
+    "    cursor3=conn.cursor()\n",
+    "    cursor3.execute(\"\"\"select id from cart_history where not exists (select * from purchases where cart_history.id = purchases.cart_id and datetime between ? and ? ) and datetime between ? and ? \"\"\",[(date_start),(date_finish),(date_start),(date_finish)])\n",
+    "    return len(cursor3.fetchall())"
    ]
   },
   {
@@ -168,8 +173,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def GetPlot2():\n",
-    "    data = Report2(3)\n",
+    "def GetPlot2(category_id):\n",
+    "    data = Report2(category_id)\n",
     "    time_of_days = ['Ночь', 'Утро', 'День', 'Вечер']\n",
     "    counts = [data['Ночь'],data['Утро'],data['День'],data['Вечер']]\n",
     "\n",
@@ -186,16 +191,6 @@
     "    p.legend.location = \"top_right\"\n",
     "\n",
     "    return p\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "p1 = GetPlot1()\n",
-    "p2 = GetPlot2()"
    ]
   },
   {
@@ -219,9 +214,10 @@
      "output_type": "stream",
      "text": [
       " * Running on http://127.0.0.1:5000/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [14/Jan/2019 17:18:03] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [14/Jan/2019 17:18:04] \"GET /plot HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [14/Jan/2019 17:18:04] \"GET /plot2 HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [14/Jan/2019 21:05:11] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [14/Jan/2019 21:05:12] \"GET /favicon.ico HTTP/1.1\" 404 -\n",
+      "127.0.0.1 - - [14/Jan/2019 21:05:12] \"GET /plot2 HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [14/Jan/2019 21:05:13] \"GET /plot HTTP/1.1\" 200 -\n"
      ]
     }
    ],
@@ -253,25 +249,35 @@
     "\n",
     ".left-element {\n",
     "    display: inline-block;\n",
-    "    position: absolute;\n",
-    "    left: 0;\n",
+    "    float: right;\n",
+    "    width: 500px;\n",
+    "    margin-left: -100%;\n",
+    "    position: relative;\n",
     "}\n",
     "\n",
     ".right-element {\n",
     "    display: inline-block;\n",
-    "    position: absolute;\n",
-    "    right: 0;\n",
+    "    float: left;\n",
+    "    width: 500px;\n",
+    "    position: relative;\n",
     "}\n",
     ".right-bottom-element {\n",
-    "    padding-bottom: 20px;\n",
-    "    display: inline-block;\n",
-    "    position: absolute;\n",
+    "    min-width: 1000px;\n",
+    "    height: 109px;\n",
+    "    position: relative;\n",
+    "    margin: 100px auto;\n",
     "}\n",
+    ".left-bottom-element {\n",
+    "    min-width: 1000px;\n",
+    "    height: 109px;\n",
+    "    position: relative;\n",
+    "    margin: 150px auto;\n",
+    "}\n",
+    "\n",
     "</style>\n",
     "<body>\n",
     "<div class=\"container\">\n",
-    "    <div class=\"left-element\" id=\"myplot\">   \n",
-    "    </div>\n",
+    "    <div class=\"left-element\" id=\"myplot\"> </div>\n",
     "     <div class=\"right-element\" id=\"categories\">\n",
     "      <form>\n",
     "          <select name=\"categories\">\n",
@@ -284,9 +290,16 @@
     "          <input type=\"submit\">\n",
     "    </form>  \n",
     "    </div>\n",
-    "    <div class=\"right-bottom-element\" id=\"myplot2\" >\n",
-    "        \n",
-    "    </div>\n",
+    "    <div class=\"right-bottom-element\" id=\"myplot2\" ></div>\n",
+    "    <form>\n",
+    "      <div class=\"left-bottom-element\">\n",
+    "      <label>Количество брошенных корзин за период:</label>\n",
+    "        <label for=\"bday\">Дата начала:</label>\n",
+    "        <input type=\"date\" id=\"start_date\" name=\"startdate\">\n",
+    "        <label for=\"bday\">Дата окончания:</label>\n",
+    "        <input type=\"date\" id=\"finish_date\" name=\"finishdate\">\n",
+    "      </div>\n",
+    "    </form>\n",
     "</div>\n",
     "  <script>\n",
     "  fetch('/plot')\n",
@@ -307,12 +320,12 @@
     "\n",
     "@app.route('/plot')\n",
     "def plot():\n",
-    "    p = p1\n",
+    "    p = GetPlot1()\n",
     "    return json.dumps(json_item(p, \"myplot\"))\n",
     "\n",
     "@app.route('/plot2')\n",
     "def plot2():\n",
-    "    p = p2\n",
+    "    p = GetPlot2(3)\n",
     "    return json.dumps(json_item(p))\n",
     "\n",
     "if __name__ == '__main__':\n",
