--- a/parser.ipynb
+++ b/parser.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,6 +20,20 @@
     " \n",
     "conn = sqlite3.connect(\"logs.db\")\n",
     "cursor = conn.cursor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cursor.execute(\"\"\"drop TABLE category_goods\"\"\")\n",
+    "cursor.execute(\"\"\"drop TABLE goods\"\"\")\n",
+    "cursor.execute(\"\"\"drop TABLE users\"\"\")\n",
+    "cursor.execute(\"\"\"drop TABLE visits\"\"\")\n",
+    "cursor.execute(\"\"\"drop TABLE cart_history\"\"\")\n",
+    "cursor.execute(\"\"\"drop TABLE purchases\"\"\")"
    ]
   },
   {
@@ -39,39 +53,39 @@
     }
    ],
    "source": [
-    "# # Создание таблицы категорий продуктов \n",
-    "# cursor.execute(\"\"\"CREATE TABLE category_goods\n",
-    "#                   (id integer primary key, name text)\n",
-    "#                \"\"\")\n",
-    "# # Создание таблицы товаров\n",
-    "# cursor.execute(\"\"\"CREATE TABLE goods\n",
-    "#                   (id integer primary key autoincrement, name text, category_id integer,\n",
-    "#                    FOREIGN KEY (category_id) REFERENCES category_goods (id))\n",
-    "#                \"\"\")\n",
-    "# Создание таблицы пользователей\n",
-    "# cursor.execute(\"\"\"CREATE TABLE users\n",
-    "#                   (id integer primary key autoincrement, ip text unique, country text)\n",
-    "#                \"\"\")\n",
-    "# Создание таблицы посещений\n",
-    "# cursor.execute(\"\"\"CREATE TABLE visits\n",
-    "#                   (id integer primary key autoincrement, datetime datetime, category_id integer,\n",
-    "#                    good_id integer, user_id integer,\n",
-    "#                    FOREIGN KEY (category_id) REFERENCES category_goods (id),\n",
-    "#                    FOREIGN KEY (good_id) REFERENCES goods (id),\n",
-    "#                    FOREIGN KEY (user_id) REFERENCES users (id))\n",
-    "#                \"\"\")\n",
-    "# Создание таблицы истории помещений товаров в корзину\n",
-    "# cursor.execute(\"\"\"CREATE TABLE cart_history\n",
-    "#                   (id integer primary key, datetime datetime,\n",
-    "#                    good_id integer, user_id integer, amount integer,\n",
-    "#                    FOREIGN KEY (good_id) REFERENCES goods (id),\n",
-    "#                    FOREIGN KEY (user_id) REFERENCES users (id))\n",
-    "#                \"\"\")\n",
-    "# # Создание таблицы покупок\n",
-    "# cursor.execute(\"\"\"CREATE TABLE purchases\n",
-    "#                   (id integer primary key autoincrement, datetime datetime, status BOOLEAN default false, cart_id integer,\n",
-    "#                   FOREIGN KEY (cart_id) REFERENCES cart_history (id))\n",
-    "#                \"\"\")\n"
+    "# Создание таблицы категорий продуктов \n",
+    "cursor.execute(\"\"\"CREATE TABLE category_goods\n",
+    "                  (id integer primary key, name text)\n",
+    "               \"\"\")\n",
+    "# Создание таблицы товаров\n",
+    "cursor.execute(\"\"\"CREATE TABLE goods\n",
+    "                  (id integer primary key autoincrement, name text, category_id integer,\n",
+    "                   FOREIGN KEY (category_id) REFERENCES category_goods (id))\n",
+    "               \"\"\")\n",
+    "Создание таблицы пользователей\n",
+    "cursor.execute(\"\"\"CREATE TABLE users\n",
+    "                  (id integer primary key autoincrement, ip text unique, country text)\n",
+    "               \"\"\")\n",
+    "Создание таблицы посещений\n",
+    "cursor.execute(\"\"\"CREATE TABLE visits\n",
+    "                  (id integer primary key autoincrement, datetime datetime, category_id integer,\n",
+    "                   good_id integer, user_id integer,\n",
+    "                   FOREIGN KEY (category_id) REFERENCES category_goods (id),\n",
+    "                   FOREIGN KEY (good_id) REFERENCES goods (id),\n",
+    "                   FOREIGN KEY (user_id) REFERENCES users (id))\n",
+    "               \"\"\")\n",
+    "Создание таблицы истории помещений товаров в корзину\n",
+    "cursor.execute(\"\"\"CREATE TABLE cart_history\n",
+    "                  (id integer primary key, datetime datetime,\n",
+    "                   good_id integer, user_id integer, amount integer,\n",
+    "                   FOREIGN KEY (good_id) REFERENCES goods (id),\n",
+    "                   FOREIGN KEY (user_id) REFERENCES users (id))\n",
+    "               \"\"\")\n",
+    "# Создание таблицы покупок\n",
+    "cursor.execute(\"\"\"CREATE TABLE purchases\n",
+    "                  (id integer primary key autoincrement, datetime datetime, status BOOLEAN default false, cart_id integer,\n",
+    "                  FOREIGN KEY (cart_id) REFERENCES cart_history (id))\n",
+    "               \"\"\")\n"
    ]
   },
   {
@@ -150,23 +164,6 @@
     "print(list_pay)\n",
     "print(list_success_pay)\n",
     "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "737\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(len(list_success_pay))"
    ]
   },
   {
@@ -15725,7 +15722,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cursor.close()\n",
+    "conn.close()\n"
+   ]
   }
  ],
  "metadata": {
